1. Add Adapter for Note,place the note list in homepage 2. improve the item location

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.qingyu.qnote.AddNoteActivity"></activity>
+        <activity android:name="com.qingyu.qnote.NoteActivity"></activity>
     </application>
 
 </manifest>
